# EBGM

./: .gitignore  .rsync-filter.txt  ReadMe.md  linux-build-debug.sh  linux-build-release.sh
src/: CMakeLists.txt
src/EBGM/: alg.cpp  alg.h  cvutils.cpp  cvutils.h  ebgm.cpp  ebgm.h  graph.hpp  gui.cpp  gui.h  iofiles.cpp  iofiles.h  jet.hpp  kernels.cpp  kernels.h  points.hpp  tests.cpp  tests.h  utils.cpp  utils.h
